@@ -17,6 +17,7 @@ CPPUNIT_TEST( testEqual );
 CPPUNIT_TEST( testSets );
 CPPUNIT_TEST( testAddressLookup );
 CPPUNIT_TEST( testLocalAddressLookup );
+CPPUNIT_TEST( testGetAllLocalAddrs );
 CPPUNIT_TEST_SUITE_END();
 
 public:
@@ -36,6 +37,7 @@ public:
 
    void testLocalAddressLookup();
 
+   void testGetAllLocalAddrs();
 };
 
 };
